--- a/index2.html
+++ b/index2.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terms and Conditions2</title>
     <link rel="stylesheet" href="index2.css">
-    <link rel="stylesheet" href="index2.js">
-  
-    
+    <script src="./index2.js"></script>
   </head>
   <body>
-
-    
     <div id="container">
       <a href="#1" class="href">Using Our Services</a>
       <a href="#2" class="href">Content Provided to Us </a>
@@ -221,5 +217,6 @@
     <!-- <button type="button" class="scrollTopbtn">
     <img id="scrollTopBtn" src="./icons8-scroll-up.gif" alt="icons8-scroll-up.gif" >
     </button> -->
+
   </body>
 </html>
