--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terms and Conditions2</title>
-    <link rel="stylesheet" href="index2.css">
-    <script src="./index2.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <script src="./index.js"></script>
   </head>
   <body>
     <div id="container">
